# AgentSphere-AI

./: .env.example  .gitignore  DB_SETUP.md  GMAIL_SETUP.md  MCP_Execution_Workflow.md  MIGRATION.md  MODEL_CONFIG.md  README.md  alembic.ini  authenticate_gmail.py  authenticate_zoho.py  cleanup_db.py  debug_db.py  debug_decrypt.py  debug_mcp_connect.py  debug_output.txt  debug_zoho.py  fetch_zoho_customers.py  inspect_mcp_tools.py  main.py  mcp_config.json  mcp_config.schema.json  pyproject.toml  requirements.txt  server.py  sort.py  streamlit_app.py  test.py  test_github_conn.py  test_notion_mcp.py  tool_comparison_report.json  tool_inspection_report.json  verify_mcp.py
FrontEnd/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
FrontEnd/src/: App.tsx  index.css
FrontEnd/src/components/: AgentStatusIndicator.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  CommandPalette.tsx  LinkPreview.tsx  Sidebar.tsx  SkeletonLoader.tsx  ThemeSettings.tsx  ToolCard.tsx  TopBar.tsx  TypingIndicator.tsx
FrontEnd/src/hooks/: useChat.ts  useSession.ts  useTheme.tsx  useTools.ts
FrontEnd/src/pages/: Index.tsx
alembic/: env.py
alembic/versions/: 0e8c319db45f_initial_schema_with_tenants_and_tenant_.py  17136468099b_remove_hitl_tables.py  40a8b24534f0_refactor_oauthtoken_model.py  5542bbf5c1eb_syncing_model_changes.py  9a49cbbb6780_fresh_init.py  a1b2c3d4e5f6_fresh_start.py  b7f8a9c0d1e2_add_hitl_oauth_soft_delete.py  c8d9e0f1a2b3_add_app_id_to_oauth_tokens.py  f08c2c086e1b_clean_checkpointers.py
authentication/: GMAIL_SETUP.md  README.md  YOUTUBE_SETUP.md  ZOHO_SETUP.md  authenticate_gmail.py  authenticate_youtube.py  authenticate_zoho.py
backend/app/: cli_entry.py  config.py  dependencies.py  main.py  streamlit_entry.py
backend/app/core/: exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  conversation.py  hitl_request.py  mcp_server.py  message.py  oauth_token.py  tenant.py  user.py
backend/app/services/: chat_service.py  mcp_service.py
backend/scripts/: import_mcp_config.py  list_users.py  test_github_oauth_fix.py  verify_configs.py  verify_github_isolation.py  verify_google_env.py  verify_mcp_isolation.py  verify_token_isolation.py
docs/: API_DOCUMENTATION.md  BACKEND_SETUP.md  FRONTEND_PROMPT.md
reasearch/: multi_agents_langgraph.ipynb  test.ipynb
scripts/: fix_setup.py  generate_encryption_key.py  init_default_tenant.py  migrate_configs_to_db.py  migrate_hitl_config.py  migrate_json_config.py  setup_database.py
src/: agent.py  callbacks.py  github_mcp_client.py  github_tools.py  helper_github_mcp.py  model.py  supervisor.py  system_prompt.py  tool.py
src/Figma_MCP/: figma_client.py  figma_tools.py
src/Github_MCP/: github_tools.py  list_mcp_tools.py  mcp_tools.json
src/Gmail_MCP/: GMAIL_TOOL_FIX.md  README.md  authenticate_gmail.py  gmail_mcp_client.py  gmail_tools.py  requirements.txt
src/Zoho_MCP/: zoho_mcp_client.py  zoho_tools.py
src/api/: dependencies.py  main.py
src/api/routers/: chat.py  metadata.py  sessions.py  tools.py
src/api/schemas/: base.py
src/configs/: .gitkeep
src/core/agents/: __init__.py  agent.py  callbacks.py  expert_factory.py  hitl_interrupt.py  model.py  planner.py  supervisor.py  system_prompt.py
src/core/auth/: security.py  service.py
src/core/config/: __init__.py  database.py  tenant_config.py
src/core/llm/: provider.py
src/core/mcp/: manager.py  pool.py  tool_registry.py
src/core/prompts/: math_agent.txt  python_agent.txt  websearch_agent.txt
src/core/state/: __init__.py  checkpointer.py  conversation_store.py  filtered_checkpointer.py  models.py  thread_manager.py
src/core/tools/: __init__.py  dynamic_tool_registry.py
src/mcp_clients/Filesystem/: client.py
src/mcp_clients/discord/: __init__.py  client.py
src/mcp_clients/filesystem/: __init__.py  client.py
src/mcp_clients/github/: __init__.py  client.py
src/mcp_clients/gmail/: __init__.py  client.py
src/mcp_clients/youtube/: __init__.py  client.py
src/mcp_clients/zoho/: __init__.py  client.py
src/mcp_servers/: .gitkeep
src/mcp_servers/discord-mcp/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
src/mcp_servers/file-system-mcp-server/: LICENSE  README.md
src/mcp_servers/zoho-mcp/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RELEASE.md  VALIDATION_REPORT_FINAL.md  pyproject.toml  requirements.txt  test_all_endpoints.py  test_package_validation.py  test_results_summary.md  validation_report.md
src/mcp_servers/zoho-mcp/config/: .env.example
src/mcp_servers/zoho-mcp/tests/: __init__.py  test_api.py  test_api_enhancements.py  test_auth_flow.py  test_bulk_operations.py  test_contact_tools.py  test_credential_paths.py  test_documentation.py  test_errors.py  test_expense_tools.py  test_invoice_tools.py  test_item_tools.py  test_logging.py  test_models.py  test_oauth_docs.py  test_progress.py  test_prompts.py  test_resources.py  test_sales_tools.py  test_server.py  test_transport.py
src/mcp_servers/zoho-mcp/tests/tools/: __init__.py
src/mcp_servers/zoho-mcp/zoho_mcp/: __init__.py  __main__.py  auth_flow.py  bulk_operations.py  errors.py  progress.py  prompts.py  resources.py  server.py  transport.py  zoho_logging.py
src/mcp_servers/zoho-mcp/zoho_mcp/config/: __init__.py  settings.py
src/mcp_servers/zoho-mcp/zoho_mcp/models/: __init__.py  base.py  contacts.py  expenses.py  invoices.py  items.py  sales.py
src/mcp_servers/zoho-mcp/zoho_mcp/tools/: __init__.py  api.py  contacts.py  expenses.py  invoices.py  items.py  sales.py
tests/: test_api_manual.py  test_checkpointer.py  test_gmail_mcp.py  test_mcp_auth_flow.py
(+449 files in other folders)
