[project]
name = "agentsphere-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "ddgs==9.9.1",
    "duckduckgo-search==8.1.1",
    "email-validator>=2.3.0",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-generativeai==0.3.2",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain==1.0.7",
    "langchain-community==0.4.1",
    "langchain-core==1.0.5",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai==0.0.1",
    "langchain-groq==1.0.1",
    "langchain-openai==1.0.3",
    "langgraph==1.0.3",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-supervisor==0.0.30",
    "mcp>=1.1.2",
    "numexpr>=2.14.1",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
    "sqlalchemy>=2.0.44",
    "youtube-search>=2.1.2",
]
